--- a/T2D/T2D.cfg
+++ b/T2D/T2D.cfg
@@ -4,13 +4,13 @@
 [PATHS]
 
 # Absolute path to the output files will be written
-analysis_path: /home/jhz22/depict
+analysis_path: /home/jhz22/DEPICT_v1_rel194
 
 
 [GWAS FILE SETTINGS]
 
 # Absolute path to GWAS summary statistics (can be in plain text or gzip format)
-gwas_summary_statistics_file: /home/jhz22/depict/T2D.txt.gz
+gwas_summary_statistics_file: /home/jhz22/DEPICT_v1_rel194/T2D.txt.gz
 
 # Association cutoff used by DEPICT to define associated loci
 association_pvalue_cutoff:  5e-8
