--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,9 @@ nav:
     - CAD/README.md
     - T2D/README.md
   - Genomics: genomics.md
-  - Proteomics: proteomics.md
+  - Proteomics:
+    - proteomics.md
+    - R-Programming-for-Mass-Spectrometry.md 
 theme:
     name: mkdocs
     nav_style: dark
